<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OvermindClient</string>
    <string name="edit_ip">Enter the OvermindServer IP</string>
    <string name="start_simulation">Start simulation</string>
    <string name="server_ip">Look up the IP on the Overmind webpage</string>
    <string name="connection_failed_title">Connection failed</string>
    <string name="back">Back</string>
    <string name="connection_failed_message">Connection with the Overmind server failed. Check that the
    IP is correct.</string>
    <string name="connection_lost_title">Connection lost</string>
    <string name="connection_lost_message">Connection with the Overmind server lost. Please check back at a later time.</string>
    <string name="stream_error_title">Data stream interrupted</string>
    <string name="stream_error_message">Unexpected interruption of the TCP data stream.
    Please check back at a later time.</string>
    <string name="udp_socket_timeout_title">UDP socket timeout</string>
    <string name="udp_socket_timeout_message">The UDP socket did not receive any packet before the timeout. Please check your connection and
    try again at a later time.</string>
    <string name="gpu_id_error_title">"GPU unknown"</string>
    <string name="gpu_id_error_message">"Could not identify the graphics chipset of this device. Cannot launch the simulation."</string>
    <string name="edit_num_of_neurons">Enter the # of neurons for the local network</string>
    <string name="checkbox_num_of_neurons">Let the application determine the appropriate number</string>
    <string name="num_of_neurons_text">"Determined by the application"</string>
    <string name="num_of_neurons_error_title">"Wrong format for number of neurons"</string>
    <string name="num_of_neurons_error_message">"Please specify a number between 1 and 1024."</string>
    <string name="connection_settings_title">"Connection settings"</string>
    <string name="neural_network_settings_title">"Neural network settings"</string>
    <string name="rs">"Regular spiking neuron"</string>
    <string name="fs">"Fast spiking neuron"</string>
    <string name="ch">"Chattering neuron"</string>
    <string name="local_network_parameters">"Local network parameters"</string>
    <string name="renderer">"Renderer: %1$s"</string>
    <string name="venodr">"Vendor: %1$s"</string>
    <string name="current">"Current: %1$f pA"</string>
    <string name="device_info">Device info</string>
    <string name="stimulus_selection">Stimulus selection</string>
    <string name="opencl_failure_title">"OpenCL failure"</string>
    <string name="opencl_failure_message">"An error has occurred during the simulation."</string>

</resources>
